# fast_exp_analytics

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml
examples/: duration_plan_ab.xlsx  duration_plan_ab_custom.xlsx  fast_exp_analytics_example.ipynb  report_ab_exp_id_4242.xlsx  report_abc_id_4242.xlsx
fast_exp_analytics/: __init__.py  ab.py  abc.py  config.py  datasets.py  duration.py  exporters.py  exporters_ab.py  exporters_duration.py  llm.py  messaging.py  reporting.py  reporting_ab.py
tests/: test_imports.py
